# pyprojex

./: .gitignore  README.md
deepPy/: pyproject.toml
deepPy/notebooks/numbers/: numeric.ipynb
deepPy/numbers/: Fractions.ipynb  numeric.ipynb
deepPy/src/numbers/: num_interpreter.py
deepPy/test/numbers/: test_num_interpreter.py
dm/IrisGarden/: app.py  iris.ipynb  kmn_app.py  kmn_sea_app.py  nnapp.py  seatips.ipynb
dm/IrisGarden/org/dm/algos/: iris_math.py  kmeans.py  kmeans_viz.py  knn.py  mknn.py  nn.py
dm/IrisGarden/org/dm/app/: WH_PY_S1_A1.ipynb  display.py  play.ipynb  plot.ipynb
dm/IrisGarden/org/dm/ingest/: reader.py
dm/IrisGarden/org/tranz/: Anagrams.ipynb  Basics.ipynb  WH_PH_S2.ipynb  Words and Comprehensions.ipynb
dm/linalg/: arrays.ipynb
dm/webapp/: app.py
dm/webapp/static/: style.css
dm/webapp/templates/: help.html  test.html
dynapat/org/dp/s1/: inh.py  iter.py  minh.py  wrapper.py
dynapat/org/dp/s2/: absfac.py  builder.py  fac.py
dynapat/org/pat/: action.py  app.py  being.py  check.py  unit.py
flupy/: pyproject.toml
funcPy/conc/: append.py
